<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".statistics.ui.StatisticsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_distance_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_distance"
        app:layout_constraintBottom_toTopOf="@+id/total_avg_speed_info_text_view"
        app:layout_constraintEnd_toEndOf="@+id/total_distance_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/total_distance_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0km"
        android:textSize="@dimen/text_30"
        app:layout_constraintBottom_toTopOf="@+id/total_distance_info_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_time_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time"
        app:layout_constraintBottom_toTopOf="@+id/total_calories_info_text_view"
        app:layout_constraintEnd_toEndOf="@+id/total_time_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/total_time_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:textSize="@dimen/text_30"
        app:layout_constraintBottom_toTopOf="@+id/total_time_info_text_view"
        app:layout_constraintEnd_toStartOf="@+id/guideline_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_calories_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_calories_burned"
        app:layout_constraintBottom_toTopOf="@+id/guideline_3"
        app:layout_constraintEnd_toEndOf="@+id/total_calories_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/total_calories_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_calories_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0kcal"
        android:textSize="@dimen/text_30"
        app:layout_constraintBottom_toTopOf="@+id/total_calories_info_text_view"
        app:layout_constraintEnd_toStartOf="@+id/guideline_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_avg_speed_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_speed"
        app:layout_constraintBottom_toTopOf="@+id/guideline_3"
        app:layout_constraintEnd_toEndOf="@+id/average_speed_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/average_speed_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/average_speed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0km_h"
        android:textSize="@dimen/text_30"
        app:layout_constraintBottom_toTopOf="@+id/total_avg_speed_info_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7017784" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_avg_speed_info_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>