<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/padding_8">

    <ImageView
        android:id="@+id/run_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/date"
        app:layout_constraintEnd_toStartOf="@+id/time_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/run_image_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/time"
        app:layout_constraintEnd_toStartOf="@+id/distance_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/run_image_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/distance"
        app:layout_constraintEnd_toStartOf="@+id/avg_speed_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/time_text_view"
        app:layout_constraintTop_toBottomOf="@+id/run_image_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/avg_speed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/avgspeed"
        app:layout_constraintEnd_toStartOf="@+id/calories_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/distance_text_view"
        app:layout_constraintTop_toBottomOf="@+id/run_image_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/calories_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/avg_speed_text_view"
        app:layout_constraintTop_toBottomOf="@+id/run_image_view" />

</androidx.constraintlayout.widget.ConstraintLayout>