<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    tools:context=".settings.ui.SettingsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_til"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        app:hintTextColor="@color/md_blue_50"
        app:layout_constraintBottom_toTopOf="@+id/weight_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:textColor="@color/md_blue_50"
            android:textCursorDrawable="@drawable/cursor_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_til"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/md_blue_50"
        app:layout_constraintBottom_toTopOf="@+id/guideline_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_weight"
            android:inputType="numberDecimal"
            android:textColor="@color/md_blue_50"
            android:textCursorDrawable="@drawable/cursor_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/apply_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_til" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>